[tool.poetry]
name = "api.authentication"
version = "0.1.0"
description = ""
authors = ["Joaquin Rodriguez <jrhuerta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.10.8"
fastapi = "^0.42.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
